# one-cloud

./: .dockerignore  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.test.txt  requirements.txt
app/: main.py
app/application/api/: api.py
app/application/api/endpoints/: admin.py  integration.py  token.py  user.py
app/application/api/model/: response.py  user.py
app/application/repository/: user_repository.py
app/application/services/: external_service.py  sts_service.py  user_service.py
app/core/helper/: helper.py
app/core/middleware/: auth.py  db.py  user.py
app/core/settings/: client.py  setting.py
tests/: conftest.py
tests/integration/: conftest.py  test_admin.py  test_integration.py  test_token.py  test_user.py
tests/unit/: test_external_service.py  test_sts_service.py  test_user_service.py
tests/unit/middleware/: test_auth.py
tests/unit/repository/: test_user_repository.py
tests/unit/services/: test_external_service.py  test_sts_service.py  test_user_service.py
