[tool.poetry]
name = "one-cloud"
version = "0.1.0"
description = ""
authors = ["Aristeu <aristeuneto13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.5.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}
psycopg2-binary = "^2.9.9"
motor = "^3.6.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
